# haskell-challenge-1

./: CHANGELOG.md  LICENSE  cabal.project  haskell-challenge1.cabal  readme.md
.github/workflows/: haskell.yml
app/: Main.hs
