cabal-version:      2.4
name:               haskell-challenge1
version:            0.1.0.0
synopsis:           My solution to the first challenge of NoRedInk
description:        My solution to the first challenge of NoRedInk!

-- bug-reports:
license:            MIT
author:             Flavio Corpa
copyright:          Flavio Corpa © 2022
maintainer:         flaviocorpa@gmail.com
category:           Data Science
extra-source-files: CHANGELOG.md
data-files:         db.json

executable haskell-challenge1
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    -- other-modules:

    build-depends:
        , aeson >=2.0.2.0
        , base >=4.16.0.0
        , bytestring
        , containers
        , text
        , time
