cabal-version:      2.4
name:               haskell-challenge1
version:            0.1.0.0
synopsis:           My Haskell solution to a data science challenge
description:        My Haskell solution to a data science challenge!
bug-reports:        https://github.com/kutyel/haskell-challenge-1/issues
license:            MIT
author:             Flavio Corpa
copyright:          Flavio Corpa © 2022
maintainer:         flaviocorpa@gmail.com
category:           DataScience
extra-source-files: CHANGELOG.md
data-files:         db.json

executable haskell-challenge1
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , aeson
    , base           >=4.16.0.0
    , bytestring
    , extra
    , generic-aeson
    , text
    , time
